fixes sidebar overflow (into footer) and updates the Upgrading to 4.0 guide with content added during sprint

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,6 +45,7 @@ main {
 
   .sidebar {
     display: block;
+    overflow-y: auto;
     height: 100vh;
     flex: 0 0 33.3333333333%;
     max-width: 33.3333333333%;
